Made the tests multi-platform since I use Linux now (yes yes thank thank you i know) and changed the GitHub actions to use linux as well. Fixed the commit warnings.